<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.fragments.UploadReceiptFragment">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:id="@+id/iv_gallery"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            android:src="@drawable/ic_gallery"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/ll_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scan_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/scan"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_to_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:text="@string/upload"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_update_response"
        app:layout_constraintTop_toBottomOf="@id/tv_zip_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_response"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/update_receipt"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>